# dorimu-bot-framwork

./: .gitmodules  Cargo.toml  README.md
crates/qqbot_sdk/: Cargo.toml
crates/qqbot_sdk/src/: command_plugin.rs  lib.rs
crates/qqbot_sdk/tests/: command_depend.rs  depend_store.rs  event_depend.rs  event_handler_registry.rs  plugin_depend.rs
crates/qqbot_sdk_app/: Cargo.toml
crates/qqbot_sdk_app/src/: app.rs  app_test.rs  config.rs  dispatching.rs  lib.rs  registering.rs
crates/qqbot_sdk_app/src/app/: app.rs  command_config.rs  command_plugin.rs  config.rs  depend.rs  dispatching.rs  mod.rs  registering.rs
crates/qqbot_sdk_app/tests/: app_test.rs  event_handler_registry.rs  plugin_depend.rs
crates/qqbot_sdk_axum/: Cargo.toml
crates/qqbot_sdk_axum/src/: lib.rs  runner.rs
crates/qqbot_sdk_commands/: Cargo.toml
crates/qqbot_sdk_commands/qqbot_sdk_commands/: Cargo.toml
crates/qqbot_sdk_commands/qqbot_sdk_commands/src/: defining.rs  lib.rs
crates/qqbot_sdk_commands/qqbot_sdk_commands_macros/src/: dependency_injection.rs
crates/qqbot_sdk_commands/src/: context.rs  defining.rs  lib.rs
crates/qqbot_sdk_macros/: Cargo.toml
crates/qqbot_sdk_macros/src/: command.rs  lib.rs
crates/qqbot_sdk_plugin/qqbot_sdk_commands/qqbot_sdk_commands/: Cargo.toml
crates/qqbot_sdk_plugin/qqbot_sdk_commands/qqbot_sdk_commands/src/: common.rs  defining.rs  lib.rs  replying.rs  store.rs
crates/qqbot_sdk_plugin/qqbot_sdk_commands/qqbot_sdk_commands/tests/: command_registration.rs
crates/qqbot_sdk_plugin/qqbot_sdk_commands/qqbot_sdk_commands_macros/: Cargo.toml
crates/qqbot_sdk_plugin/qqbot_sdk_commands/qqbot_sdk_commands_macros/src/: command.rs  lib.rs
crates/qqbot_sdk_plugin/qqbot_sdk_commands/qqbot_sdk_commands_macros/tests/: command_registration.rs
crates/qqbot_sdk_runtime/: Cargo.toml
crates/qqbot_sdk_runtime/src/: depend.rs  dependency.rs  event_handler.rs  event_registry.rs  lib.rs  plugin.rs
crates/qqbot_sdk_runtime/tests/: depend_store.rs  event_depend.rs
examples/: quickstart.rs
src/app/: app.rs  config.rs  dispatching.rs  mod.rs  plugin.rs  registering.rs
src/app/commands/: mod.rs  plugin.rs
src/axum/: runner.rs
