[workspace]
members = [
    "crates/qqbot_sdk_core",
    "crates/qqbot_sdk",
    "crates/qqbot_sdk_app",
    "crates/qqbot_sdk_axum",
    "crates/qqbot_sdk_commands",
    "crates/qqbot_sdk_macros",
    "crates/qqbot_sdk_event_macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
ed25519-dalek = "2"
hex = "0.4"
http = "1"
inventory = "0.3.24"
once_cell = "1.21.4"
percent-encoding = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.20"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
