[package]
name = "qqbot_sdk_app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application framework for qqbot_sdk"

[dependencies]
qqbot_sdk_core = { path = "../qqbot_sdk_core", default-features = false, features = ["events", "openapi", "signature"] }
qqbot_sdk_runtime = { path = "../qqbot_sdk_runtime" }
serde.workspace = true
tracing.workspace = true
