[package]
name = "qqbot_sdk_commands_macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0.45"
syn = { version = "3.0.3", features = ["full"] }

[dev-dependencies]
inventory.workspace = true
qqbot_sdk_commands = { path = "../qqbot_sdk_commands" }
qqbot_sdk_runtime = { path = "../../../qqbot_sdk_runtime" }
